--- a/home-2.html
+++ b/home-2.html
@@ -150,7 +150,7 @@
                                                     <span class="custom-control-description">สำเร็จการศึกษา</span>
                                                 </label>
                                             </form>
-                                            <label for="" class="col-form-label">จาก</label>
+                                            <label for="" class="col-form-label" style="display: block;">จาก</label>
                                             <input type="" style="padding:.5rem;" class="form-control2" placeholder="From" />
                                             <label for="">สนใจเข้าศึกษาในระดับ</label>
                                             <select class="form-control2">
@@ -176,7 +176,7 @@
                                             <label for="" class="col-form-label">เบอร์โทรศัพท์</label>
                                             <input type="" style="padding:.5rem;" class="form-control2" placeholder="Phone" />
 
-                                            <div class="" style="position: absolute; bottom: 0px; right: 0px; text-align: right; padding-top:20px">
+                                            <div class="" style="position: absolute; bottom: -50px; right: 0px; text-align: right; padding-top:20px">
                                                 <a class="skip" href="#">ข้ามขั้นตอนนี้ไป</a>
                                                 <button id="student-next" class="btn btn-outline-success2 my-2 my-sm-0" type="submit">ต่อไป</button>
                                             </div>
@@ -214,7 +214,7 @@
 
                                             <label for="" class="col-form-label">เบอร์โทรศัพท์</label>
                                             <input type="" style="padding:.5rem;" class="form-control2" placeholder="Phone" />
-                                            <div class="" style="position: absolute; bottom: 0px; right: 0px; text-align: right; padding-top:20px">
+                                            <div class="" style="position: absolute; bottom: -50px; right: 0px; text-align: right; padding-top:20px">
                                                 <a class="skip" href="#">ข้ามขั้นตอนนี้ไป</a>
                                                 <button id="parent-next" class="btn btn-outline-success2 my-2 my-sm-0" type="submit">ต่อไป </button>
                                             </div>
@@ -258,7 +258,7 @@
                                     </div>
 
                                     <div style="position: absolute; bottom: 2rem; right: 2rem; padding-top:20px;">
-                                        <!--<span class="ti-angle-left"></span>-->
+                                        
                                         <a id="student-back" class="skip"> ย้อนกลับ</a>
                                         <button class="btn btn-outline-success2 my-2 my-sm-0" type="submit">ส่งคำตอบ </button>
                                     </div>
