--- a/2cards.html
+++ b/2cards.html
@@ -148,7 +148,7 @@
           <section class="row text-center" style="padding: 0;">
             <div class="col-md-8 col-sm-12 placeholder"></div>
             <div class="col-md-4 col-sm-3 placeholder d-none d-sm-block">
-              <a class="back-detail" style="float: left;" href="file:///C:/xampp/htdocs/sharescholarship/home-2.html">&lt; กลับสู่หน้าค้นหา</a>
+              <a class="back-detail" style="float: left;" href="#">&lt; กลับสู่หน้าค้นหา</a>
               <ul class="nav nav-tabs" role="tablist" style="padding-left: 5%; margin-bottom: 1rem;">
                 <li class="nav-item">
                   <a class="nav-link-tab-2 active" data-toggle="tab" href="#home" role="tab"><i class="fa fa-th-large bar-list"></i></a>
@@ -166,136 +166,144 @@
             <div class="col-md-4 col-sm-3 placeholder">
               <p class="orange">ทุนการศึกษาอื่นๆ</p><p style="display: inline-block;">10 ผลลัพธ์</p>
             </div>
-            <!-- Head -->
+
+            <!-- Cards -->
             <div class="col-md-12 placeholder type">
               <div class="row cards-section">
-
+                
                 <div class="col-lg-4 col-md-6 col-sm-6 placeholder">
-                  <a class="card"  href="file:///C:/xampp/htdocs/sharescholarship/detail-respon.html#">
+                  <a class="card" href="#">
                     <span class="topcard" id="orange-gradient">
-                      <p class="details-header p-responsive">ทุนการศึกษาเอสโซ่</p>
+                      <p class="details-header p-responsive" id="text-over">ทุนการศึกษาเอสโซ่</p>
                       <p class="name-details-caption p-responsive">สมโภชกรุงรัตนโกสินทร์ 200 ปี</p>
+                      <p class="float-right more-detail" href="#">อ่านรายละเอียด&#187;</p>
                     </span>
                     <span class="bg-logo">
                       <img class="img-fluid" src="images/Esso_textlogo.png">
                     </span>
                     <span class="caption-details d-responsive text-left">
-                      <p>จำนวนเงิน&nbsp;10,000 บาท</p>
-                      <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
+                      <p id="text-over">จำนวนเงิน&nbsp;10,000 บาท</p>
+                      <p id="text-over">เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
                     </span>
                   </a>
                 </div>
-                <!-- End Head -->
-                <!-- Cards -->
+                
                 <div class="col-lg-4 col-md-6 col-sm-6 placeholder">
-                  <a class="card"  href="#">
+                  <a class="card" href="#">
                     <span class="topcard" id="orange-gradient">
-                      <p class="details-header p-responsive">ทุนการศึกษาคาวาซากิ</p>
-                      <p class="name-details-caption p-responsive"></p>
+                      <p class="details-header p-responsive" id="text-over">ทุนการศึกษาคาวาซากิ</p>
+                      <p class="name-details-caption p-responsive" id="text-over"></p>
+                      <p class="float-right more-detail" href="#">อ่านรายละเอียด&#187;</p>
                     </span>
                     <span class="bg-logo">
                       <img class="img-fluid" src="images/kawasaki.png">
                     </span>
                     <span class="caption-details d-responsive text-left">
-                      <p>จำนวนเงิน&nbsp;10,000 บาท</p>
-                      <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
+                      <p id="text-over">จำนวนเงิน&nbsp;10,000 บาท</p>
+                      <p id="text-over">เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
                     </span>
                   </a>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-6 placeholder">
-                  <a class="card"  href="#">
+                  <a class="card" href="#">
                     <span class="topcard" id="orange-gradient">
-                      <p class="details-header p-responsive">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
+                      <p class="details-header p-responsive" id="text-over">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
                       <p class="name-details-caption p-responsive">กยศ.</p>
+                      <p class="float-right more-detail" href="#">อ่านรายละเอียด&#187;</p>
                     </span>
                     <span class="bg-logo">
                       <img class="img-fluid" src="images/kys.jpg">
                     </span>
                     <span class="caption-details d-responsive text-left">
-                      <p>จำนวนเงิน&nbsp;10,000 บาท</p>
-                      <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
+                      <p id="text-over">จำนวนเงิน&nbsp;10,000 บาท</p>
+                      <p id="text-over">เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
                     </span>
                   </a>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-6 placeholder">
-                  <a class="card"  href="#">
+                  <a class="card" href="#">
                     <span class="topcard" id="orange-gradient">
-                      <p class="details-header p-responsive">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
+                      <p class="details-header p-responsive" id="text-over">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
                       <p class="name-details-caption p-responsive">กยศ.</p>
+                      <p class="float-right more-detail" href="#">อ่านรายละเอียด&#187;</p>
                     </span>
                     <span class="bg-logo">
                       <img class="img-fluid" src="images/kys.jpg">
                     </span>
                     <span class="caption-details d-responsive text-left">
-                      <p>จำนวนเงิน&nbsp;10,000 บาท</p>
-                      <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
+                      <p id="text-over">จำนวนเงิน&nbsp;10,000 บาท</p>
+                      <p id="text-over">เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
                     </span>
                   </a>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-6 placeholder">
-                  <a class="card"  href="#">
+                  <a class="card" href="#">
                     <span class="topcard" id="orange-gradient">
-                      <p class="details-header p-responsive">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
+                      <p class="details-header p-responsive" id="text-over">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
                       <p class="name-details-caption p-responsive">กยศ.</p>
+                      <p class="float-right more-detail" href="#">อ่านรายละเอียด&#187;</p>
                     </span>
                     <span class="bg-logo">
                       <img class="img-fluid" src="images/kys.jpg">
                     </span>
                     <span class="caption-details d-responsive text-left">
-                      <p>จำนวนเงิน&nbsp;10,000 บาท</p>
-                      <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
+                      <p id="text-over">จำนวนเงิน&nbsp;10,000 บาท</p>
+                      <p id="text-over">เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
                     </span>
                   </a>
                 </div>
 
 
                 <div class="col-lg-4 col-md-6 col-sm-6 placeholder">
-                  <a class="card"  href="#">
+                  <a class="card" href="#">
                     <span class="topcard" id="orange-gradient">
-                      <p class="details-header p-responsive">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
+                      <p class="details-header p-responsive" id="text-over">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
                       <p class="name-details-caption p-responsive">กยศ.</p>
+                      <p class="float-right more-detail" href="#">อ่านรายละเอียด&#187;</p>
                     </span>
                     <span class="bg-logo">
                       <img class="img-fluid" src="images/kys.jpg">
                     </span>
                     <span class="caption-details d-responsive text-left">
-                      <p>จำนวนเงิน&nbsp;10,000 บาท</p>
-                      <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
+                      <p id="text-over">จำนวนเงิน&nbsp;10,000 บาท</p>
+                      <p id="text-over">เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
                     </span>
                   </a>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-6 placeholder">
-                  <a class="card"  href="#">
+                  <a class="card" href="#">
                     <span class="topcard" id="orange-gradient">
-                      <p class="details-header p-responsive">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
+                      <p class="details-header p-responsive" id="text-over">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
                       <p class="name-details-caption p-responsive">กยศ.</p>
+                      <p class="float-right more-detail" href="#">อ่านรายละเอียด&#187;</p>
                     </span>
                     <span class="bg-logo">
                       <img class="img-fluid" src="images/kys.jpg">
                     </span>
                     <span class="caption-details d-responsive text-left">
-                      <p>จำนวนเงิน&nbsp;10,000 บาท</p>
-                      <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
+                      <p id="text-over">จำนวนเงิน&nbsp;10,000 บาท</p>
+                      <p id="text-over">เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
                     </span>
                   </a>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-6 placeholder">
-                  <a class="card"  href="#">
+                  <a class="card" href="#">
                     <span class="topcard" id="orange-gradient">
-                      <p class="details-header p-responsive">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
+                      <p class="details-header p-responsive" id="text-over">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
                       <p class="name-details-caption p-responsive">กยศ.</p>
+                      <p class="float-right more-detail" href="#">อ่านรายละเอียด&#187;</p>
                     </span>
                     <span class="bg-logo">
                       <img class="img-fluid" src="images/kys.jpg">
                     </span>
                     <span class="caption-details d-responsive text-left">
-                      <p>จำนวนเงิน&nbsp;10,000 บาท</p>
-                      <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
+                      <p id="text-over">จำนวนเงิน&nbsp;10,000 บาท</p>
+                      <p id="text-over">เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
                     </span>
                   </a>
                 </div>
