--- a/detail-respon.html
+++ b/detail-respon.html
@@ -116,17 +116,17 @@
 
 
 <!-- Button trigger modal -->
-<button type="button" data-toggle="modal" data-target="#myModal" style="background-color: transparent; border: none;">
 <div class="boxs">
-  <div data-video-url="https://www.youtube.com/embed/XGSy3_Czz8k">
-<img src="" style="width: 50%; height: auto;">
-  </div>
+<a class="lightbox" data-toggle="modal" data-target="#myModal">
+<img class="play-icon" src="images/1.jpg">
+  <i class="fa fa-play-circle" aria-hidden="true"></i>
               <div class="boxscontainer">
                 <p>ภาพความทรงจำที่น่าประทับใจของ
 นักศึกษาทุนเพชรพระจอมเกล้า</p> 
               </div>
-            </div>
-</button>
+            
+</a>
+</div>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
