--- a/home-2.html
+++ b/home-2.html
@@ -158,6 +158,7 @@
                                                 <option >ปริญญาโท</option>
                                                 <option >ปริญญาเอก</option>
                                             </select>
+
                                             <label for="">คณะที่สนใจศึกษาต่อ</label>
                                             <select class="form-control2">
                                                 <option selected>Choose</option>
@@ -258,7 +259,7 @@
 
                                     <div style="position: absolute; bottom: 2rem; right: 2rem; padding-top:20px;">
                                         
-                                        <a id="student-back" class="skip"> ย้อนกลับ</a>
+                                        <a id="student-back" style="cursor: pointer; font-size:.8rem;"> ย้อนกลับ</a>
                                         <button class="btn btn-outline-success2 my-2 my-sm-0" type="submit">ส่งคำตอบ </button>
                                     </div>
                                 </div>
@@ -298,8 +299,8 @@
                                     </div>
 
                                     <div style="position: absolute; bottom: 2rem; right: 2rem; padding-top:20px;">
-                                        <a id="parent-back"> ย้อนกลับ</a>
-                                        <button class="btn btn-primary my-2 my-sm-0" type="submit">ส่งคำตอบ </button>
+                                        <a id="parent-back" style="cursor: pointer; font-size:.8rem;"> ย้อนกลับ</a>
+                                        <button class="btn btn-outline-success2 my-2 my-sm-0" type="submit">ส่งคำตอบ </button>
                                     </div>
 
                                 </div>
