--- a/detail-respon.html
+++ b/detail-respon.html
@@ -254,17 +254,17 @@
             </div>
 
             <div class="row justify-content-start">
-              <div class="col-12 col-md-6 set-text">
+              <div class="col-12 col-md-6 order-sm-1 order-2 set-text">
                 <p class="text-right text-middle-right">นักศึกษาทุนเพชรพระจอมเกล้า
 ด้านผู้นำมีส่วนร่วมในการจัดกิจกรรม
 ที่เป็นประโยชน์ต่อมหาวิทยาลัยและส่วนรวม สมกับเป็นนักศึกษาของมหาวิทยาลัย
 เทคโนโลยีพระจอมเกล้าธนบุรี</p>
               </div>
-              <div class="col-12 col-md-6">
+              <div class="col-12 col-md-6 col-sm-12 order-1">
                 <img src="images/1.jpg" class="img-fluid img-radius linear-img-left img-p" alt="Responsive image">
               </div>
             </div>
-            
+
             <div class="row justify-content-start">
               <div class="col-12 col-md-6">
                 <img src="images/1.jpg" class="img-fluid img-radius linear-img-right img-p" alt="Responsive image">
