select(home), hamburger(each)

--- a/2cards.html
+++ b/2cards.html
@@ -27,7 +27,7 @@
       <!-- Navigation -->
       <nav class="nav-menu navbar navbar-expand-lg navbar-dark bg-gray fixed-top" id="mainNav" style="height: 76px;">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top"><img class="logo" style="position: absolute;top:0;" src="images/logo.png"></a>
+            <a class="navbar-brand"><img class="logo" style="position: absolute;top:0;" src="images/logo.png"></a>
             <p class="logo-caption">Scholarship showroom</p>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
