--- a/detail-respon.html
+++ b/detail-respon.html
@@ -26,14 +26,13 @@
     <!-- Navigation -->
     <nav class="nav-menu navbar navbar-expand-lg navbar-dark bg-gray fixed-top" id="mainNav" style="height: 76px;">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top"><img class="logo" style="position: absolute;top:0;" src="images/logo.png"></a>
+            <a class="navbar-brand"><img class="logo" style="position: absolute;top:0;" src="images/logo.png"></a>
             <p class="logo-caption">Scholarship showroom</p>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle nav-link2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย <b class="caret"></b></a>
                         <ul class="dropdown-menu">
