+image defult, css

--- a/2cards.html
+++ b/2cards.html
@@ -179,7 +179,7 @@
                       <p class="float-right more-detail" href="#">อ่านรายละเอียด&#187;</p>
                     </span>
                     <span class="bg-logo">
-                      <img class="img-fluid" src="images/Esso_textlogo.png">
+                      <img class="img-fluid" src="images/defult-2.png">
                     </span>
                     <span class="caption-details d-responsive text-left">
                       <p id="text-over">จำนวนเงิน&nbsp;10,000 บาท</p>
@@ -196,7 +196,7 @@
                       <p class="float-right more-detail" href="#">อ่านรายละเอียด&#187;</p>
                     </span>
                     <span class="bg-logo">
-                      <img class="img-fluid" src="images/kawasaki.png">
+                      <img class="img-fluid" src="images/defult.png">
                     </span>
                     <span class="caption-details d-responsive text-left">
                       <p id="text-over">จำนวนเงิน&nbsp;10,000 บาท</p>
