--- a/home-2.html
+++ b/home-2.html
@@ -34,10 +34,10 @@
 <body data-spy="scroll" data-target="#navbar" data-offset="30">
 
     <!-- Navigation -->
-    <nav class="nav-menu navbar navbar-expand-lg navbar-dark bg-gray fixed-top" id="mainNav" style="height: 76px;">
+    <nav class="nav-menu navbar navbar-expand-lg navbar-dark bg-gray fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#page-top"><img class="logo" style="position: absolute;top:0;" src="images/logo.png"></a>
-            <p class="logo-caption">Scholarship showroom</p>
+            <p class="logo-caption d-none d-md-block">Scholarship showroom</p>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -53,8 +53,8 @@
                         <a class="nav-link2 menu-index js-scroll-trigger" href="#contact">ติดต่อ</a>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle nav-link2 js-scroll-trigger" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
+                        <a href="#" class="dropdown-toggle nav-link2 text-center  js-scroll-trigger" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย <b class="caret"></b></a>
+                        <ul class="dropdown-menu text-center">
                             <li><a class="drop-selector" href="#">ภาษาไทย</a></li>
                             <li><a class="drop-selector" href="#">English</a></li>
                         </ul>
@@ -67,9 +67,9 @@
     <header id="home" class="bg-gradient" style="background: url('images/kmutt building.png') top center no-repeat; background-size: cover;">
         <div class="container mt-3">
             <div class="container">
-                <h1 style="text-align:left">ให้เราช่วยค้นหาทุนการศึกษา</h1>
-                <h1 style="text-align:left">ที่เหมาะกับคุณ</h1>
-                <h4 style="text-align:left; color:#fff">270 ทุนการศึกษา</h4>
+                <h1 class="text-animation">ให้เราช่วยค้นหาทุนการศึกษา</h1>
+                <h1 class="text-animation">ที่เหมาะกับคุณ</h1>
+                <h4 class="text-animation">270 ทุนการศึกษา</h4>
                 <p><br></p>
             </div>
         </div>
